[package]
name = "rusty_csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_csv"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
pyo3 = "0.19.0"
serde = { version = "1.0.190", features = ["derive"] }
